--- a/_posts/2022-10-14-viaje-uk.md
+++ b/_posts/2022-10-14-viaje-uk.md
@@ -83,7 +83,7 @@ La zonas **WiFi** de los **aeropuertos** suelen ser caras y **abusivas**, **no**
 
 ### Tranporte en Londres
 
-Londres tiene un **buen servicio de metro** que recorre toda la ciudad y que podéis usar para viajar por ella, podéis comprar **tickets individuales** o tarjetas de **descuento** llamadas **travel cards** las cuales hay **diarias o semanales**, también existe una tarjeta llamada **Oyster** que es **recargable** y tiene **descuento**, también tiene **versión para estudiantes**, eso si cuesta unas **7 libras el comprarla,** si que te de **nada de saldo**, y os la recomiendo **solo si pensáis venir mas veces** al reino unido. 
+Londres tiene un **buen servicio de metro** que recorre toda la ciudad y que podéis usar para viajar por ella, podéis comprar **tickets individuales** o tarjetas de **descuento** llamadas **travel cards** las cuales hay **diarias o semanales**, también existe una tarjeta llamada **Oyster** que es **recargable** y tiene **descuento**, también tiene **versión para estudiantes**, eso si cuesta unas **7 libras el comprarla,** sin que te de **nada de saldo**, y os la recomiendo **solo si pensáis venir mas veces** al reino unido. 
 
 El **metro también acepta pagos con Apple Pay y Google Pay** a precio **similar a la Oyster** pero s**in necesidad de comprar una tarjeta ni saldo**, eso **si se os va la batería** del Movil antes de salir os tocara **pagar multa**.
 
