--- a/_posts/2022-10-14-viaje-uk.md
+++ b/_posts/2022-10-14-viaje-uk.md
@@ -107,13 +107,13 @@ Lógicamente un **hotel de mas categoría os costara bastante mas dinero** pero 
 
 ### Comiendo
 
-**Londres** al ser una ciudad bastante turística tiene una a**mplia game de restaurantes de distinto tipo de comida**, de **todos los precios** que os podáis imaginar, si vais a lo mas **económico** siempre podéis ir a M**cDonals o Burger King**, si vuestro estomago los soporta, **alternativamente** podéis siempre ir a un **supermercado o deli** a comprar unos **sandwiches o baguettes**, entre otros Sainsbury, Mark & Spencer, Morrison, Tesco, Pret a Manger, etc.
+**Londres** al ser una ciudad bastante turística tiene una a**mplia gama de restaurantes de distinto tipo de comida**, de **todos los precios** que os podáis imaginar, si vais a lo mas **económico** siempre podéis ir a M**cDonals o Burger King**, si vuestro estomago los soporta, **alternativamente** podéis siempre ir a un **supermercado o deli** a comprar unos **sandwiches o baguettes**, entre otros Sainsbury, Mark & Spencer, Morrison, Tesco, Pret a Manger, etc.
 
-Estar **atentos** a si lo que vais a pedir pone que es **Spicy**, esto aunque en general se refiere a que es **espaciado** muchas veces también es **Picante (Hot)**.
+Estar **atentos** a si lo que vais a pedir pone que es **Spicy**, esto aunque en general se refiere a que es **especiado** muchas veces también es **Picante (Hot)**.
 
 Aunque las c**ocinas en Inglaterra cierran temprano** en **Londres no tanto** por la gran cantidad de turistas.
 
-Hoy en día c**asi todos los restaurantes y cafeterias** tienen **maquinas de café italianas**, eso si os **recomendamos** pediros un **double expresso**, que es lo mas **parecido** a lo que tomamos en **España**, **sino** notaréis que el cafe tiene **demasiada agua**.
+Hoy en día c**asi todos los restaurantes y cafeterias** tienen **maquinas de café italianas**, eso si os **recomendamos** pediros un **double expresso** que es un café doble solo y ya lo mezcláis con un vaso de leche caliente , que es lo mas **parecido** a lo que tomamos en **España**, **sino** notaréis que el cafe tiene **demasiada agua**.
 
 ### Tomando Algo
 
@@ -121,7 +121,7 @@ En Londres hay **muchas zonas para tomar una copa** o similar, os **recomendamos
 
 Las **copas** se ponen con **medidor**, por defecto os darán sencillos, **single**, pero podéis pedir dobles, **double**, o incluso triples, **triple**, eso si no serán nada baratas.
 
-En **cualquier bar podéis abrir un cuenta en la barra**, **bar tab**, dándole **vuestra tarjeta y fijando un importe**, por **ejemplo 100 libras**, con ello os **darán una tarjeta y/o código** donde c**ualquiera puede pedir algo usándola** y se **descuenta** de la **cantidad** puesta hasta que se **complete**, es una f**orma mas rápida cuando soys muchos** los que vais a tomar algo en un sitio.
+En **cualquier bar podéis abrir un cuenta en la barra**, **bar tab**, dándole **vuestra tarjeta y fijando un importe**, por **ejemplo 100 libras**, con ello os **darán una tarjeta y/o código** donde c**ualquiera puede pedir algo usándola** y se **descuenta** de la **cantidad** puesta hasta que se **complete**, es una f**orma mas rápida cuando soys muchos** los que vais a tomar algo en un sitio. Tenéis que *decirle al camarero "I want to open a tab"*, luego ya os preguntara de cuanto, etc.
 
 A **cierta hora** de la noche en la barra dirán algo de las **ultimas ordenes**, last orders, en los sitios mas tradicionales **tocaran una campana**, eso quiere decir que podéis **pedir la ultima ronda**, tras lo cual os la podéis tomar tranquilamente pero ya no aceptaran mas pedidos desde la barra.
 
