--- a/_posts/2022-10-14-viaje-uk.md
+++ b/_posts/2022-10-14-viaje-uk.md
@@ -14,11 +14,11 @@ Ya tenemos la **fecha** para el próximo **Fan Festival**, el cual se celebra en
 
 #### Documentación
 
-Desde el **Brexit necesitaremos pasaporte** para poder ir al Reino Unido, si somos **ciudadanos de EU** y venís de visita o turismo con una duración máxima de 6 meses **no necesitáis visado**. Si soys de **otra nacionalidad** os recomendamos usar esta aplicación que os indica que [tipo de visado necesitareis](https://www.gov.uk/check-uk-visa){:target="_blank"}.
+Desde el **Brexit necesitaremos pasaporte** para poder ir al Reino Unido, si somos **ciudadanos de EU** y venís de visita o turismo con una duración máxima de 6 meses **no necesitáis visado**. Si sois de **otra nacionalidad** os recomendamos usar esta aplicación que os indica que [tipo de visado necesitareis](https://www.gov.uk/check-uk-visa){:target="_blank"}.
 
 Podéis traer una **Tarjeta Sanitaria Europea (TSE)**, en el Reino Unido se la conoce como **European Health Insurance Card (EHIC)**, para mas información de como **solicitarla** la tenéis en [esta web](https://www.seg-social.es/wps/portal/wss/internet/Trabajadores/PrestacionesPensionesTrabajadores/10938/11566/1761){:target="_blank"}, aunque en teoría los medicos de cabecera, General **Practicioner o GP**, y **urgencias** os podrían ver sin ella, aunque la experiencia que tenemos es que os la suelen pedir igualmente y es **mejor llevarla por si tienes problemas**. El numero de **emergencias** de NHS, National Health Service, es el **999** desde cualquier teléfono, aunque también podéis usar el mismo que se usa en Europa **112**, ambos son atendidos por el mismo servicio.
 
-Si soys **estudiante** y queréis tener **descuentos** por ejemplo en **transporte** el único **documento valido es el Carné de Estudiante Internacional**, International Student Identity Card (ISIC), podéis solicitarlo desde [su Web](https://isic.es/){:target="_blank"}.
+Si sois **estudiante** y queréis tener **descuentos** por ejemplo en **transporte** el único **documento valido es el Carné de Estudiante Internacional**, International Student Identity Card (ISIC), podéis solicitarlo desde [su Web](https://isic.es/){:target="_blank"}.
 
 A dia de hoy **no es necesario** el tener ninguna **documentación** de que has sido **vacunado de coranvirus**.
 
@@ -97,6 +97,26 @@ Por ultimo tenemos los **trenes**, como los que van a los aeropuertos, que suele
 
 En **resumen** si as a hacer algún **viaje puntual**, por ejemplo de donde tengas el **hotel al Fan Festival y vuelta** te **recomiendo** o usar **Apple Pay / Google Pay o Oyster**, si vás a estar haciendo **turismo todo el dia de un lado al otro** te recomiendo una **Travelcard** para todo el dia.
 
+### Clima 
+
+En **Octubre** el clima en Londres sera algo **fresco** con un rango de temperatura de los **9 a 18 grados**, os recomendamos llevar alguna **chaqueta**, por si refresca, puede que coincida con algún dia **lluvioso** por eso deberíais llevar **paraguas o chubasquero plegable**.
+
+Sin embargo **puede** que por casualidad **algún dia no haga tanto fresco** asi que tener **algo de entre tiempo** no sera mala idea, aunque sino siempre **podéis aprovechar** para comprar algo de alguna **tienda de descuento como Primark**.
+
+### Asistiendo al festival
+
+Os vamos a dar **algunos consejos para cuando vayáis al festival**, serán solo dos días y esperamos ayudaros a que lo disfrutéis lo máximo que podáis.
+
+- Llevar **calzado y ropa cómoda**, en festival como este vais a **andar mucho** de un lado a otro, vais a **hacer cola** en muchos sitios y la **jornada será larga**, asi que intentar que lo que llevéis os ayude a aguantar.
+- Tener una **mochila**, a parte de que **os darán cosas** con la entrada, ganéis algo en algún **concurso o compréis** alguna otra cosa al final acabaréis el festival **cargando** con lo que sea.
+- Llevar una **botella de agua**, seguro que en **alguna tienda de barrio cerca de vuestro hotel** podéis comprar una **antes** de salir hacia el reciento del **evento**, donde serán mucho **mas caras**.
+- Mirar si podéis pillar una **batería externa** para el móvil, o **powerbank**, porque os aseguramos que se os **gastara la batería** y asi tiraréis algunas horas mas.
+- **Hacer sitio en el teléfono o cámara** para las **fotos y vídeos**, no sea que de repente no tengáis **espacio** en medio del festival.
+- Llevar **bolígrafos**, y algo que os **gustaría alguna firma**, no sea que os encontréis de repente a alguien conocido y no tiene nada para que os firmen.
+- Llevar **pañuelos de papel** y alguna **bolsa de plástico**, nunca se sabe cuando la vais a **necesitar** pero si se da el caso ahi estará.
+- Haceros con un **mapa del evento en la entrada**, será muy util no solo para guiaros sino también para **indicarle a algún amigo o conocido donde estaréis** si os queréis ver en el evento.
+- Si vais con amigos y os vais a separar en algún momento acordar un **punto de encuentro por si os perdéis** o similar.
+
 ### Alojamiento
 
 Londres **no es** un sitio **especialmente caro** en alojamiento, aunque **tampoco** es que sea **barato**, eso si la **calidad** de los hoteles **diferencia a como la conocemos en España**, un Hotel de 3 estrellas en Londres es de calidad i**nferior a uno de la misma categoría en España**, lo cual no quiere decir que sea **tampoco malo**.
@@ -105,15 +125,19 @@ Si os vais a **hoteles baratos** las **habitaciones** serán **minúsculas** y p
 
 Lógicamente un **hotel de mas categoría os costara bastante mas dinero** pero descansaréis mejor, asi que os dejo en **vuestra elección** como queráis hacerlo.
 
+**No hagáis reserva en un hotel hasta que tengáis la entrada**, puede ser que no haya para todo el mundo y puede pasar muchas cosas de aquí a un año, ser pacientes y **en cuanto la tengáis ir mirando**.
+
+Llevar **adaptadores para enchufes Ingleses**, los **hoteles** **no** siempre suelen **tener**, en los mas caros en **recepción os lo podrían prestar**, pero esto los podéis **comprar en supermercados** mas **baratos** que en los aeropuertos o incluso en **Amazon**, buscar por "**adaptador enchufe ingles**" o "**European to uk plug adaptor**"
+
 ### Comiendo
 
 **Londres** al ser una ciudad bastante turística tiene una a**mplia gama de restaurantes de distinto tipo de comida**, de **todos los precios** que os podáis imaginar, si vais a lo mas **económico** siempre podéis ir a M**cDonals o Burger King**, si vuestro estomago los soporta, **alternativamente** podéis siempre ir a un **supermercado o deli** a comprar unos **sandwiches o baguettes**, entre otros Sainsbury, Mark & Spencer, Morrison, Tesco, Pret a Manger, etc.
 
 Estar **atentos** a si lo que vais a pedir pone que es **Spicy**, esto aunque en general se refiere a que es **especiado** muchas veces también es **Picante (Hot)**.
 
-Aunque las c**ocinas en Inglaterra cierran temprano** en **Londres no tanto** por la gran cantidad de turistas.
+Aunque las **cocinas en Inglaterra cierran temprano** en **Londres no tanto** por la gran cantidad de turistas.
 
-Hoy en día c**asi todos los restaurantes y cafeterias** tienen **maquinas de café italianas**, eso si os **recomendamos** pediros un **double expresso** que es un café doble solo y ya lo mezcláis con un vaso de leche caliente , que es lo mas **parecido** a lo que tomamos en **España**, **sino** notaréis que el cafe tiene **demasiada agua**.
+Hoy en día **casi todos los restaurantes y cafeterias** tienen **maquinas de café italianas**, eso si os **recomendamos** pediros un **double expresso** que es un café doble solo y ya lo mezcláis con un vaso de leche caliente , que es lo mas **parecido** a lo que tomamos en **España**, **sino** notaréis que el cafe tiene **demasiada agua**.
 
 ### Tomando Algo
 
@@ -121,13 +145,13 @@ En Londres hay **muchas zonas para tomar una copa** o similar, os **recomendamos
 
 Las **copas** se ponen con **medidor**, por defecto os darán sencillos, **single**, pero podéis pedir dobles, **double**, o incluso triples, **triple**, eso si no serán nada baratas.
 
-En **cualquier bar podéis abrir un cuenta en la barra**, **bar tab**, dándole **vuestra tarjeta y fijando un importe**, por **ejemplo 100 libras**, con ello os **darán una tarjeta y/o código** donde c**ualquiera puede pedir algo usándola** y se **descuenta** de la **cantidad** puesta hasta que se **complete**, es una f**orma mas rápida cuando soys muchos** los que vais a tomar algo en un sitio. Tenéis que *decirle al camarero "I want to open a tab"*, luego ya os preguntara de cuanto, etc.
+En **cualquier bar podéis abrir un cuenta en la barra**, **bar tab**, dándole **vuestra tarjeta y fijando un importe**, por **ejemplo 100 libras**, con ello os **darán una tarjeta y/o código** donde c**ualquiera puede pedir algo usándola** y se **descuenta** de la **cantidad** puesta hasta que se **complete**, es una f**orma mas rápida cuando sois muchos** los que vais a tomar algo en un sitio. Tenéis que *decirle al camarero "I want to open a tab"*, luego ya os preguntara de cuanto, etc.
 
 A **cierta hora** de la noche en la barra dirán algo de las **ultimas ordenes**, last orders, en los sitios mas tradicionales **tocaran una campana**, eso quiere decir que podéis **pedir la ultima ronda**, tras lo cual os la podéis tomar tranquilamente pero ya no aceptaran mas pedidos desde la barra.
 
 ### De visita turística
 
-Si aprovechando que venís a Londres vais a hacer algo de turismo aquí os dejo los sitios que os recomiendo visitar en estos Dias.
+Si **aprovechando** que venís a Londres vais a hacer algo de **turismo** viniendo algunos **días extra** aquí os dejo los sitios que os **recomiendo visitar** en estos Dias.
 
 #### Centro de Londres
 
