alguna corrección mas

--- a/_posts/2022-10-14-viaje-uk.md
+++ b/_posts/2022-10-14-viaje-uk.md
@@ -107,12 +107,12 @@ Sin embargo **puede** que por casualidad **algún dia no haga tanto fresco** asi
 
 Os vamos a dar **algunos consejos para cuando vayáis al festival**, serán solo dos días y esperamos ayudaros a que lo disfrutéis lo máximo que podáis.
 
-- Llevar **calzado y ropa cómoda**, en festival como este vais a **andar mucho** de un lado a otro, vais a **hacer cola** en muchos sitios y la **jornada será larga**, asi que intentar que lo que llevéis os ayude a aguantar.
+- Llevar **calzado y ropa cómoda**, en un festival como este vais a **andar mucho** de un lado a otro, vais a **hacer cola** en muchos sitios y la **jornada será larga**, asi que intentar que lo que llevéis os ayude a aguantar.
 - Tener una **mochila**, a parte de que **os darán cosas** con la entrada, ganéis algo en algún **concurso o compréis** alguna otra cosa al final acabaréis el festival **cargando** con lo que sea.
 - Llevar una **botella de agua**, seguro que en **alguna tienda de barrio cerca de vuestro hotel** podéis comprar una **antes** de salir hacia el reciento del **evento**, donde serán mucho **mas caras**.
 - Mirar si podéis pillar una **batería externa** para el móvil, o **powerbank**, porque os aseguramos que se os **gastara la batería** y asi tiraréis algunas horas mas.
 - **Hacer sitio en el teléfono o cámara** para las **fotos y vídeos**, no sea que de repente no tengáis **espacio** en medio del festival.
-- Llevar **bolígrafos**, y algo que os **gustaría alguna firma**, no sea que os encontréis de repente a alguien conocido y no tiene nada para que os firmen.
+- Llevar **bolígrafos**, y algo que os **gustaría alguna firma**, ya que puede que os **encontréis** de repente a **alguien conocido** y no tiene nada para que os firmen.
 - Llevar **pañuelos de papel** y alguna **bolsa de plástico**, nunca se sabe cuando la vais a **necesitar** pero si se da el caso ahi estará.
 - Haceros con un **mapa del evento en la entrada**, será muy util no solo para guiaros sino también para **indicarle a algún amigo o conocido donde estaréis** si os queréis ver en el evento.
 - Si vais con amigos y os vais a separar en algún momento acordar un **punto de encuentro por si os perdéis** o similar.
