alguna correcion mas

--- a/_posts/2022-10-14-viaje-uk.md
+++ b/_posts/2022-10-14-viaje-uk.md
@@ -10,7 +10,7 @@ featured: false
 hidden: true
 ---
 
-Ya tenemos la **fecha** para el próximo **Fan Festival**, el cual se celebra en **Londres** el **21 de Octubre del 2023**, para ayudar a la comunidad que quiera venga de viaje hemos preparado una guía donde esperamos daros **consejos de cara a este viaje**.
+Ya tenemos la **fecha** para el próximo **Fan Festival**, el cual se celebra en **Londres** el **21 de Octubre del 2023**, para ayudar a la comunidad que venga de viaje hemos preparado una guía donde esperamos daros **consejos de cara a este viaje**.
 
 #### Documentación
 
@@ -50,11 +50,11 @@ También hay un limite de **10000 Euros en efectivo por grupo o familia**, aunqu
 
 Ante todo os recomendamos **no traer ni usar dinero en efectivo,** siempre que podáis evitarlo, es mucho mas **recomendable** usar vuestras **tarjetas** de débito o crédito en los servicios que utilicéis, como transportes, restaurantes o tiendas, la **comisión** de cambio de divisa sera siempre **mejor de esta forma**, en la **mayoría de casos** o **no existe o es pagada** por el que acepta el **servicio**. 
 
-Aun así si **queréis tener algo de dinero en efectivo** os comentamos las formas, **de mejor a peor**, que podéis obtenerlo.
+Aun así si **queréis tener algo de dinero en efectivo** os comentamos las formas, **de mejor a peor**, con las que podéis obtenerlo.
 
 - **Pedir Libras a tu Banco**, puedes **pedir dinero en efectivo** a tu oficina habitual y aunque suelen **tardar unos días** en traerlo las **comisiones y demás son las mejores** que tendrás de cualquier forma.
 - Desde un **cajero** que pertenezca a una **entidad bancaria**, Barclays, HSBC, Santander, Lloyds, MetroBank etc. **Mirar** si vuestro banco tiene algún **acuerdo con alguna entidad** del reino unido o que **comisiones aplica**.
-- Pedir **cash back** cuando haces una **compra**, por **ejemplo** puedes ir a un **Supermercado comprar algo** como unas patatas y refresco y decirle al cajero **"Can I have 10 pounds of cashback?"** para que te den 10 libras en efectivo.
+- Pedir **cash back** cuando haces una **compra**, por **ejemplo** puedes ir a un **Supermercado comprar algo** como unas patatas y refresco y decirle al cajero **"Can I have 10 pounds of cash back?"** para que te den 10 libras en efectivo. Esto 
 
 **Nunca uséis las típicas oficinas de cambio** o similares y mucho **cuidado** que a veces hay **cajeros** que están **operados por dichas empresas**, aunque digan que no tienen comisiones el **precio de su cambio es horrible**.
 
