mejoras en el articulo del viaje a londres

--- a/_posts/2022-10-14-viaje-uk.md
+++ b/_posts/2022-10-14-viaje-uk.md
@@ -10,7 +10,7 @@ featured: false
 hidden: true
 ---
 
-Ya tenemos la **fecha** para el próximo **Fan Festival**, el cual se celebra en **Londres** el **21 de Octubre del 2023**, para ayudar a la comunidad que venga de viaje hemos preparado una guía donde esperamos daros **consejos de cara a este viaje**.
+Ya tenemos la **fecha** para el próximo **Fan Festival**, el cual se celebra en **Londres** el **21 de Octubre del 2023**, para ayudar a la comunidad que atienda a este evento hemos preparado una guía donde esperamos daros **consejos que os ayude en este viaje**.
 
 #### Documentación
 
@@ -20,7 +20,7 @@ Podéis traer una **Tarjeta Sanitaria Europea (TSE)**, en el Reino Unido se la c
 
 Si sois **estudiante** y queréis tener **descuentos** por ejemplo en **transporte** el único **documento valido es el Carné de Estudiante Internacional**, International Student Identity Card (ISIC), podéis solicitarlo desde [su Web](https://isic.es/){:target="_blank"}.
 
-A dia de hoy **no es necesario** el tener ninguna **documentación** de que has sido **vacunado de coranvirus**.
+A dia de hoy **no es necesario** el tener ninguna **documentación** de que has sido **vacunado de coranavirus**.
 
 #### Que podemos traer
 
@@ -54,7 +54,7 @@ Aun así si **queréis tener algo de dinero en efectivo** os comentamos las form
 
 - **Pedir Libras a tu Banco**, puedes **pedir dinero en efectivo** a tu oficina habitual y aunque suelen **tardar unos días** en traerlo las **comisiones y demás son las mejores** que tendrás de cualquier forma.
 - Desde un **cajero** que pertenezca a una **entidad bancaria**, Barclays, HSBC, Santander, Lloyds, MetroBank etc. **Mirar** si vuestro banco tiene algún **acuerdo con alguna entidad** del reino unido o que **comisiones aplica**.
-- Pedir **cash back** cuando haces una **compra**, por **ejemplo** puedes ir a un **Supermercado comprar algo** como unas patatas y refresco y decirle al cajero **"Can I have 10 pounds of cash back?"** para que te den 10 libras en efectivo. Esto 
+- Pedir **cash back** cuando haces una **compra**, por **ejemplo** puedes ir a un **Supermercado comprar algo** como unas patatas y refresco y decirle al cajero **"Can I have 10 pounds of cash back?"** para que te den 10 libras en efectivo. 
 
 **Nunca uséis las típicas oficinas de cambio** o similares y mucho **cuidado** que a veces hay **cajeros** que están **operados por dichas empresas**, aunque digan que no tienen comisiones el **precio de su cambio es horrible**.
 
@@ -87,7 +87,9 @@ Londres tiene un **buen servicio de metro** que recorre toda la ciudad y que pod
 
 El **metro también acepta pagos con Apple Pay y Google Pay** a precio **similar a la Oyster** pero s**in necesidad de comprar una tarjeta ni saldo**, eso **si se os va la batería** del Movil antes de salir os tocara **pagar multa**.
 
-Los **precios varían** según las **zonas**, el centro es zona 1 y según os alejáis del llegais hasta zona 6, a parte hay precios en **horario punta (Peak) de Lunes a Viernes de 6:30 a 9:30** y horario **normal (Off-Peak)**.
+Los **precios varían** según las **zonas**, el centro es zona 1 y según os alejáis del llegáis hasta zona 6, a parte hay precios en **horario punta (Peak) de Lunes a Viernes de 6:30 a 9:30** y horario **normal (Off-Peak)**.
+
+Una **curiosidad** en el Metro de Londres es que en **un mismo anden puede pasar mas de una linea** y que ademas hay **lineas que tienen bifurcaciones** donde distintos trenes de la **misma linea van por distinta ruta**, **aseguraros** siempre que vais por la **ruta** que queréis mirando los **letreros digitales** en el **arcén** y consultar el **mapa de la linea** el cual esta disponible en la **estación**, a veces también hay **pequeño mapas del metro** que podéis obtener en las **taquillas** antes de entrar en el Metro.
 
 También hay autobuses, los cuales están **incluidos en las travel card y Oyster**.
 
