--- a/_posts/2022-10-20-sildihn.md
+++ b/_posts/2022-10-20-sildihn.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Guía del Subterráneo de Sil'dihn"
 author: cecile
 categories: [ herramientas ]
-tags: [herramientas, guías]
+tags: [herramientas, dungeons, variant, criterion]
 image: assets/images/articles/guias/sildihn/portada.jpg
 description: "Guía del Subterráneo de Sil'dihn"
 featured: false
