--- a/_posts/2022-10-21-fashion221021.md
+++ b/_posts/2022-10-21-fashion221021.md
@@ -18,7 +18,7 @@ Esta semana de nuevo [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_b
 
 Para hacer los **80 puntos** de manera fácil y ganar los **60,000 MGP**:
 
-- En **pecho** cualquier pieza teñida con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/c18be404e86/" class="eorzeadb_link" target="_blank">Salmon Pink Dye</a> que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=70849afadc9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)** por 40 gil.
+- En **cabeza** cualquier pieza teñida con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/c18be404e86/" class="eorzeadb_link" target="_blank">Salmon Pink Dye</a> que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=70849afadc9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)** por 40 gil.
 - En **manos** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/e1b33191f2f/" class="eorzeadb_link" target="_blank">Toadskin Armguards</a>, que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoria *Purchase Disciple of War Gear* > Purchase Gear (Lv. 30-39) por 2242 gil, teñida con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/f2d34ba2b19/" class="eorzeadb_link" target="_blank">Mesa Red Dye</a> que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=70849afadc9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)** por 216 gil.
 
 <blockquote>
