actualizacion de guia de Sil'dihn

--- a/_posts/2022-10-20-sildihn.md
+++ b/_posts/2022-10-20-sildihn.md
@@ -98,6 +98,8 @@ En la **Variant Dungeon** podremos tomar **distintos caminos**, eligiendo por la
 
 Para **resolver los caminos** podemos utilizar las **pistas** que **Nanamo** nos irá descubriendo mas lo que veamos **en el propio recorrido**, muchas de estas están **enlazadas** y al **completar una ruta** nos pueden dar **pistas sobre otra**, si queréis conocer directamente **la solución de estas rutas** os hemos preparado una guía al [final de este articulo](#solución-a-todos-los-caminos).
 
+Además si **completáis todos los caminos** [Kokoshu](https://eu.finalfantasyxiv.com/lodestone/playguide/db/npc/npc/9988961febd/){:target="_blank" class="eorzeadb_link"} (Ul'dah - Steps of Nald X: 12.5 Y: 8.3) os dará una **nueva misión** [For Coin, Country, and Comrades](https://eu.finalfantasyxiv.com/lodestone/playguide/db/quest/3a92b83a36b){:target="_blank" class="eorzeadb_link"} la cual **completará la historia** de este contenido incluyendo alguna **cinemática** interesante y nos dará el **titulo**: **Sultana's Shadow**.
+
 #### Criterion Dungeon
 
 Este modo lo **desbloquearemos tras completar la Varian Dungeon**, aunque **tiene algunas diferencias** con el modo anterior.
