update viaje uk

--- a/_posts/2022-10-26-viaje-uk.md
+++ b/_posts/2022-10-26-viaje-uk.md
@@ -172,7 +172,16 @@ Los **taxi son muy caros y nada recomendables**, en su lugar se usan **empresas 
 
 Los cercanías suelen operar en una horario similar a los del metro pero no suele haber trenes nocturnos.
 
-Por ultimo tenemos los **trenes**, como los que van a los aeropuertos, que suelen ser **bastante caros en general** pero **varían su precio** según sean **normales o express** (rápido).
+También tenemos los **trenes de larga distancia**, como los que van a los aeropuertos, que suelen ser **bastante caros en general** pero **varían su precio** según sean **normales o express** (rápido), aún asi serán **mucho mas baratos que los taxis**.
+
+Para que os hagáis una idea tomamos como ejemplo Gatwick, uno de los aeropuertos.
+
+- Normal: £17.20, £34.40 ida y vuelta.
+- Normal (Oyster) £10.90/£17.90, £21.80/£35.80 ida y vuelta, dependiendo si es hora punta o no.
+- Express: £19.90 ida, £38.90 ida y vuelta.
+- Express: (Venta anticipada): £17.80 ida, £34.70 ida y vuelta.
+- Express (Oyster) £19.80, £39.60 ida y vuelta.
+- Taxi: unas de £60 a £100 por trayecto, con espacio para 4 personas.
 
 #### Resumen
 
@@ -199,7 +208,7 @@ Primero para **llegar al sitio del evento**, **ExCel London**, os dejamos un **m
     <sub><sup>Mapa de viaje al ExCel London</sup></sub>
 </p>
 
-También os vamos a dar **algunos consejosl**, serán solo dos días y esperamos ayudaros a que lo disfrutéis lo máximo que podáis.
+También os vamos a dar **algunos consejos**, serán solo dos días y esperamos ayudaros a que lo disfrutéis lo máximo que podáis.
 
 - Llevar **calzado y ropa cómoda**, en un festival como este vais a **andar mucho** de un lado a otro, vais a **hacer cola** en muchos sitios y la **jornada será larga**, asi que intentar que lo que llevéis os ayude a aguantar.
 - Tener una **mochila**, a parte de que **os darán cosas** con la entrada, ganéis algo en algún **concurso o compréis** alguna otra cosa al final acabaréis el festival **cargando** con lo que sea.
@@ -223,7 +232,13 @@ Lógicamente un **hotel de mas categoría os costara bastante mas dinero** pero 
 
 **No hagáis reserva en un hotel hasta que tengáis la entrada**, puede ser que no haya para todo el mundo y puede pasar muchas cosas de aquí a un año, ser pacientes y **en cuanto la tengáis ir mirando**.
 
-Llevar **adaptadores para enchufes Ingleses**, los **hoteles** **no** siempre suelen **tener**, en los mas caros en **recepción os lo podrían prestar**, pero esto los podéis **comprar en supermercados** mas **baratos** que en los aeropuertos o incluso en **Amazon**, buscar por "**adaptador enchufe ingles**" o "**European to uk plug adaptor**", en España **puede** que lo encontréis en alguna **ferretería** y mas **barato que** comprarlos en **internet**. **Nunca** compréis adaptadores de esos para **multiples países** y tipos de enchufen suelen ser un **timo y ser mucho mas caros** que los tradicionales.
+Llevar **adaptadores para enchufes Ingleses**, los **hoteles** **no** siempre suelen **tener**, en los mas caros en **recepción os lo podrían prestar**, pero esto los podéis **comprar en supermercados** mas **baratos** que en los aeropuertos o incluso en **Amazon**, buscar por "**adaptador enchufe ingles**" o "**European to uk plug adaptor**", en España **puede** que lo encontréis en alguna **ferretería** y mas **barato que** comprarlos en **internet**. **Nunca** compréis adaptadores de esos para **multiples países** y tipos de enchufe, suelen ser un **timo y ser mucho mas caros** que los tradicionales.
+
+
+<p align="center">
+    <img src="{{ site.baseurl }}/assets/images/articles/guias/viaje-uk/euro-uk.jpg"><br/>
+    <sub><sup>Adaptar enchufe EU - UK</sup></sub>
+</p>
 
 [▲volver a contenido](#contenido)
 
