actualizacion precios transporte

--- a/_posts/2022-10-26-viaje-uk.md
+++ b/_posts/2022-10-26-viaje-uk.md
@@ -176,12 +176,12 @@ También tenemos los **trenes de larga distancia**, como los que van a los aerop
 
 Para que os hagáis una idea tomamos como ejemplo Gatwick, uno de los aeropuertos.
 
-- Normal: £17.20, £34.40 ida y vuelta.
-- Normal (Oyster) £10.90/£17.90, £21.80/£35.80 ida y vuelta, dependiendo si es hora punta o no.
-- Express: £19.90 ida, £38.90 ida y vuelta.
-- Express: (Venta anticipada): £17.80 ida, £34.70 ida y vuelta.
-- Express (Oyster) £19.80, £39.60 ida y vuelta.
-- Taxi: unas de £60 a £100 por trayecto, con espacio para 4 personas.
+- **Normal**: £17.20 ida, £34.40 ida y vuelta.
+- **Normal (Oyster)**: £10.90/£17.90 ida, £21.80/£35.80 ida y vuelta, dependiendo si es hora punta o no.
+- **Express**: £19.90 ida, £38.90 ida y vuelta.
+- **Express**: (Venta anticipada): £17.80 ida, £34.70 ida y vuelta.
+- **Express (Oyster)**: £19.80 ida, £39.60 ida y vuelta.
+- **Taxi**: de £60 a £100 por trayecto, con espacio para 4 personas.
 
 #### Resumen
 
