actualizar datos de hoteles y enchufes

--- a/_posts/2022-10-26-viaje-uk.md
+++ b/_posts/2022-10-26-viaje-uk.md
@@ -224,15 +224,17 @@ También os vamos a dar **algunos consejos**, serán solo dos días y esperamos 
 
 ### Alojamiento
 
-Londres **no es** un sitio **especialmente caro** en alojamiento, aunque **tampoco** es que sea **barato**, eso si la **calidad** de los hoteles **diferencia a como la conocemos en España**, un Hotel de 3 estrellas en Londres es de calidad i**nferior a uno de la misma categoría en España**, lo cual no quiere decir que sea **tampoco malo**.
+Londres **no es** un sitio **especialmente caro** en alojamiento, aunque **tampoco** es que sea **barato**, eso si la **calidad** de los hoteles **diferencia a como la conocemos en España**, un Hotel de 3 estrellas en Londres es de calidad **inferior a uno de la misma categoría en España**, lo cual no quiere decir que sea **tampoco malo**.
 
-Si os vais a **hoteles baratos** las **habitaciones** serán **minúsculas** y posiblemente el **mobiliario no sea de mucha calidad** pero seguramente sera **suficiente** para descansar el **par de noches** que estéis por aquí.
+Si os vais a **hoteles baratos** las **habitaciones** serán **minúsculas** y posiblemente el **mobiliario no sea de mucha calidad** pero seguramente sera **suficiente** para descansar el **par de noches** que estéis por aquí. Eso si tener en cuenta que **alguno de los hoteles baratos** tiene **ducha** o incluso **baño compartido**, asi que estar preparado si es el caso.
 
 Lógicamente un **hotel de mas categoría os costara bastante mas dinero** pero descansaréis mejor, asi que os dejo en **vuestra elección** como queráis hacerlo.
 
 **No hagáis reserva en un hotel hasta que tengáis la entrada**, puede ser que no haya para todo el mundo y puede pasar muchas cosas de aquí a un año, ser pacientes y **en cuanto la tengáis ir mirando**.
 
-Llevar **adaptadores para enchufes Ingleses**, los **hoteles** **no** siempre suelen **tener**, en los mas caros en **recepción os lo podrían prestar**, pero esto los podéis **comprar en supermercados** mas **baratos** que en los aeropuertos o incluso en **Amazon**, buscar por "**adaptador enchufe ingles**" o "**European to uk plug adaptor**", en España **puede** que lo encontréis en alguna **ferretería** y mas **barato que** comprarlos en **internet**. **Nunca** compréis adaptadores de esos para **multiples países** y tipos de enchufe, suelen ser un **timo y ser mucho mas caros** que los tradicionales.
+Llevar **adaptadores para enchufes Ingleses**, los **hoteles** **no** siempre suelen **tener**, en los mas caros en **recepción os lo podrían prestar**, pero esto los podéis **comprar en supermercados** mas **baratos** que en los aeropuertos o incluso en **Amazon**, buscar por "**adaptador enchufe ingles**" o "**European to uk plug adaptor**", también los venden muy **baratos** en **tienda de descuento**, poundshop,  poundland, savers, pound stretcher, etc.
+
+En España **puede** que lo encontréis en alguna **ferretería** y mas **barato que** comprarlos en **internet**. **Nunca** compréis adaptadores de esos para **multiples países** y tipos de enchufe, suelen ser un **timo y ser mucho mas caros** que los tradicionales.
 
 
 <p align="center">
