precio tabaco y equipaje

--- a/_posts/2022-10-26-viaje-uk.md
+++ b/_posts/2022-10-26-viaje-uk.md
@@ -71,6 +71,8 @@ Hay que tener en cuenta que **cosas os podéis traer** a Reino Unido **libre de 
 - 50 puros
 - 200 varillas de tabaco para dispositivos electrónicos
 
+Si **vais a traer tabaco** ya que en **Inglaterra** es bastante **caro**, sobre unos £13 cada paquete, os recomendamos **comprar en un estanco**, sera siempre **mas barato que en dentro del Aeropuerto**, en España podéis encontrar **estancos en la mayoría de Aeropuertos** antes de pasar a la zona de facturación.
+
 ##### Alcohol
 
 - 42 litros de cerveza
@@ -103,6 +105,10 @@ Por ultimo os quiero **recomendar** que si vais a **viajar al extranjero** uséi
 ### Volando a Londres
 
 Londres tiene **multiple aeropuertos**, algunos mas cerca que otros, siempre os **recomendaremos que voléis al que tenga ruta directa** desde vuestro aeropuerto mas cercano. ya que las **escalas aumentan el precio** considerablemente. Muchas de las **compañías de bajo coste solo viajan a ciertos aeropuertos**.
+
+Si hace mucho que no voláis en **compañías de bajo coste** estas han **reducido**, y mucho, lo que **podéis llevar en cabina**, **consultar sus** páginas **webs** antes de prepararos para el viaje, **algunas solo** admiten ya **un bulto** y os pondrán **pegas** de llevar **mochila a parte de equipaje de mano**, de la misma forma el numero de **Kg por pasajero al facturar** también ha sido **reducido**.
+
+Si vais a **facturar os aconsejamos** el **pesar** vuestra maleta en una **bascula de suelo** antes de dejarla preparada, ademas es **recomendable el ponerle alguna pegatina** o similar para **identificarla** rápidamente en la **recolección de equipajes**.
 
 Para **buscar** un **vuelo** hacia cualquier aeropuerto de Londres podéis usar el **código IATA que los incluye a todos**: **LON**.
 
