--- a/_posts/2022-10-26-viaje-uk.md
+++ b/_posts/2022-10-26-viaje-uk.md
@@ -282,7 +282,7 @@ Si **aprovechando** que venís a Londres vais a hacer algo de **turismo** vinien
 
 **Londres es una ciudad grande**, es recomendable **no** ir **solos** de **noche lejos del centro**. Tened **cuidado con vuestras pertenencias** y **no** llevéis **toda** la **documentación encima**, es mejor dejar el **dni/pasaporte en el hotel** y llevar una **fotocopia en la cartera**. 
 
-**Hay walk tours** que son maneras **económicas de tener un guía** que os pasee por alguna zona histórica de la ciudad. Los tours son **normalmente en inglés**, podéis mirar los que hay acercándoos a una **oficina de turismo**.
+**Hay walk tours** que son maneras **económicas de tener un guía** que os pasee por alguna zona histórica de la ciudad. Los tours son **normalmente en inglés**, podéis mirar los que hay acercándoos a una [oficina de turismo](https://www.visitlondon.com/es/tag/tourist-information-centre){:target="_blank"} o mediante su [web](https://www.cityoflondonguides.com/tours){:target="_blank"}.
 
 Aquí os dejo los sitios que os **recomiendo visitar** en estos Dias:
 
