--- a/_posts/2022-11-16-viaje-uk.md
+++ b/_posts/2022-11-16-viaje-uk.md
@@ -7,7 +7,7 @@ tags: [guías, fan festival]
 image: assets/images/articles/guias/viaje-uk/portada.jpg
 description: "Guia de cosas a tener en cuenta si viajas a UK para el Fan Festival"
 featured: false
-hidden: true
+hidden: false
 ---
 
 Ya tenemos la **fecha** para el próximo **Fan Festival**, el cual se celebra en **Londres** el **21 de Octubre del 2023**, para ayudar a la comunidad que atienda a este evento hemos preparado una guía donde esperamos daros **consejos que os ayude en este viaje**.
