--- a/_posts/2023/2023-05-26-fashion230602.md
+++ b/_posts/2023/2023-05-26-fashion230602.md
@@ -25,9 +25,8 @@ Para hacer los **80 puntos** de manera fácil y ganar los **60,000 MGP**:
 - En **pecho cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0c0c7f94f09/" class="eorzeadb_link" target="_blank">Soot Black Dye</a>, que podeis obtener de:
     - Comprar, si teneis la reputación subida con los **Ixali**, a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/82cc59ae4c7/?item=188d2c75e07&type=gil" class="eorzeadb_link" target="_blank">Ixali Vendor</a> en **North Shroud (X:24.9 Y:22.7)** por 216 gil.
     - **Craftear** con la receta de nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist o Cullinarian que os pedira <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0563231e95a/" class="eorzeadb_link" target="_blank">Grey Pigment</a> los cuales podeis obtener en *Western La Noscea, Quarterstone (X:31.4 Y:28.2)* siendo Minero 28+ o *South Shroud, Upper Paths (X:17.1 Y:21.1)* siendo Botanista 28+.    
-- En **guantes** <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/item/8541cc84bb0/" class="eorzeadb_link" target="_blank">Goatskin Brais</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Battle Gear > Purchase Gear (Lv. 20-29)* por 675 gil.
-- En **zapatos** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/recipe/f3932faea65/" class="eorzeadb_link" target="_blank">Leather Lightmitts</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Battle Gear > Purchase Gear (Lv. 1-9)* por 126 gil.
-
+- En **Guante** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/recipe/f3932faea65/" class="eorzeadb_link" target="_blank">Leather Lightmitts</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Disciple of Magic Gear > Purchase Gear (Lv. 1-9)* por 126 gil.
+- En **Piernas** <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/item/8541cc84bb0/" class="eorzeadb_link" target="_blank">Goatskin Brais</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Disciple of War Gear > Purchase Gear (Lv. 20-29)* por 675 gil.
 
 
 <blockquote>
