--- a/_posts/2023/2023-06-16-fashion230616.md
+++ b/_posts/2023/2023-06-16-fashion230616.md
@@ -27,7 +27,7 @@ Para hacer los **80 puntos** de manera fácil y ganar los **60,000 MGP**:
 - En **pantalones cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0c0c7f94f09/" class="eorzeadb_link" target="_blank">Soot Black Dye</a>, que podeis obtener de:
     - Comprar, si teneis la reputación subida con los **Ixali**, a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/82cc59ae4c7/?item=188d2c75e07&type=gil" class="eorzeadb_link" target="_blank">Ixali Vendor</a> en **North Shroud (X:24.9 Y:22.7)** por 216 gil.
     - **Craftear** con la receta de nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist o Cullinarian que os pedira <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0563231e95a/" class="eorzeadb_link" target="_blank">Grey Pigment</a> los cuales podeis obtener en *Western La Noscea, Quarterstone (X:31.4 Y:28.2)* siendo Minero 28+ o *South Shroud, Upper Paths (X:17.1 Y:21.1)* siendo Botanista 28+.
-- En **zapatos** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/50d6de0e6ee/" class="eorzeadb_link" target="_blank">Goatskin Brais</a> que podéis obtener en Satasha, Tam-tara y Copperbell, las cuales podréis hacer solos fácilmente.
+- En **zapatos** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/50d6de0e6ee/" class="eorzeadb_link" target="_blank">Plundered Moccasins</a> que podéis obtener en Satasha, Tam-tara y Copperbell, las cuales podréis hacer solos fácilmente.
 
 
 <blockquote>
